[package]
name = "roast"
version = "1.0.0"
edition = "2024"
description = "A JVM Data Crawler"
authors = ["Roland Schär (@roele)"]
repository = "https://github.com/roele/roast"
readme = "README.md"
license = "MIT"
keywords = ["java", "jvm", "crawler", "database", "cli"]
categories = ["command-line-utilities"]
include = [
  "src/**/*.rs",
  "/Cargo.lock",
  "/LICENSE",
  "/README.md",
]
build = "build.rs"

[[bin]]
name = "roast"
path = "src/main.rs"

[dependencies]
build-time = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env", "string"] }
color-eyre = "0.6"
color-print = "0.3"
comrak = "0.37"
confique = { version = "0.3", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
eyre = "0.6"
indoc = "2"
itertools = "0.14"
log = "0.4"
once_cell = "1"
openssl = "0.10"
postgres = "0.19"
postgres-openssl = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "gzip", "json", "zstd"] }
scraper = "0.23"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
shellexpand = "3"
tokio = { version = "1", features = ["full", "rt"] }
versions = { version = "6", features = ["serde"] }
xx = "2"

[build-dependencies]
built = { version = "0.7", features = ["chrono"] }
